fixed z-index problem
custom styled radio buttons were overlapping navbar

--- a/resources/styles/css/style.css
+++ b/resources/styles/css/style.css
@@ -99,6 +99,7 @@ nav {
     left: 0;
     background-color: #1C1C1C;
     transform: translateX(-100%);
+    z-index: 999;
   }
   .navigation li {
     padding-left: 1rem;
@@ -248,7 +249,7 @@ nav {
   font-size: 0.6rem;
   margin: 10px 10px 10px 0;
   height: 30px;
-  z-index: 9;
+  z-index: 2;
   cursor: pointer;
   transition: all 0.25s linear;
   -webkit-transition: all 0.25s linear;
@@ -261,7 +262,7 @@ nav {
   border-radius: 100%;
   height: 10px;
   width: 10px;
-  z-index: 5;
+  z-index: 1;
   transition: border .25s linear;
   -webkit-transition: border .25s linear;
 }
