--- a/resources/styles/scss/sections/_mainIntro.scss
+++ b/resources/styles/scss/sections/_mainIntro.scss
@@ -130,7 +130,7 @@
         font-size: 0.6rem;
         margin: 10px 10px 10px 0;
         height: 30px;
-        z-index: 9;
+        z-index: 2;
         cursor: pointer;
         transition: all 0.25s linear;
         -webkit-transition: all 0.25s linear;
@@ -143,7 +143,7 @@
         border-radius: 100%;
         height: 10px;
         width: 10px;
-        z-index: 5;
+        z-index: 1;
         transition: border .25s linear;
         -webkit-transition: border .25s linear;
       } 
